test/expected/shellcheck_test_operators.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "[" "-f" "a" "-a" "-f" "b" "]"]
  [CompoundListCondition, None]
    [SimpleCommand "[" "!" "-z" "$x" "]"]
  [CompoundListCondition, None]
    [SimpleCommand "[" "!" "-n" "$y" "]"]
  [CompoundListCondition, None]
    [SimpleCommand "false"]
  [CompoundListCondition, &&]
    [SimpleCommand "[" "!" "-a" "/nonexistent" "]"]
[Word
  Unquoted "["
]
[Word
  Unquoted "-f"
]
[Word
  Unquoted "a"
]
[Word
  Unquoted "-a"
]
[Word
  Unquoted "-f"
]
[Word
  Unquoted "b"
]
[Word
  Unquoted "]"
]
[Word
  Unquoted "["
]
[Word
  Unquoted "!"
]
[Word
  Unquoted "-z"
]
[Word
  Variable "x"
]
[Word
  Unquoted "]"
]
[Word
  Unquoted "["
]
[Word
  Unquoted "!"
]
[Word
  Unquoted "-n"
]
[Word
  Variable "y"
]
[Word
  Unquoted "]"
]
[Word
  Unquoted "false"
]
[Word
  Unquoted "["
]
[Word
  Unquoted "!"
]
[Word
  Unquoted "-a"
]
[Word
  Unquoted "/nonexistent"
]
[Word
  Unquoted "]"
]
shit: 2:8: warning: A test with -a or -o is obsolescent.
     2 |  [ -f a -a -f b ]
       |         ^~ here.
note: Join two tests with && or || instead.
shit: 3:3: warning: A negated -z is just -n.
     3 |  [ ! -z "$x" ]
       |    ^~ here.
note: Test with -n instead.
shit: 4:3: warning: A negated -n is just -z.
     4 |  [ ! -n "$y" ]
       |    ^~ here.
note: Test with -z instead.
shit: 3:8: error: Unable to expand 'x' because the parameter is not set.
     3 |  [ ! -z "$x" ]
       |         ^~~~ here.
